--- a/WebApplicationCrud/appsettings.json
+++ b/WebApplicationCrud/appsettings.json
@@ -9,9 +9,8 @@
   },
   "AllowedHosts": "*",
   "Path": {
-    "Images": "wwwroot/img/product/ProductImages",
-    "Thumbnails": "wwwroot/img/product/Thumbnails",
-    "BlogImages": "wwwroot/img/blog/BlogImages",
- 
+    "Images": "wwwroot/img/productAndBlogAddedImages"
+   
+
   }
 }
