--- a/WebApplicationCrud/WebApplicationCrud.csproj
+++ b/WebApplicationCrud/WebApplicationCrud.csproj
@@ -31,6 +31,181 @@
     <None Include="wwwroot\fonts\ElegantIcons.svg" />
     <None Include="wwwroot\fonts\fontawesome-webfont.svg" />
     <None Include="wwwroot\fonts\fontawesome-webfont.woff2" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table-locale-all.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table-locale-all.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table-vue.esm.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table-vue.esm.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table-vue.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table-vue.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table.js" />
+    <None Include="wwwroot\js\DatatableAssets\bootstrap-table.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\addrbar\bootstrap-table-addrbar.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\addrbar\bootstrap-table-addrbar.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\auto-refresh\bootstrap-table-auto-refresh.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\auto-refresh\bootstrap-table-auto-refresh.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\cookie\bootstrap-table-cookie.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\cookie\bootstrap-table-cookie.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\copy-rows\bootstrap-table-copy-rows.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\copy-rows\bootstrap-table-copy-rows.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\custom-view\bootstrap-table-custom-view.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\custom-view\bootstrap-table-custom-view.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\defer-url\bootstrap-table-defer-url.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\defer-url\bootstrap-table-defer-url.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\editable\bootstrap-table-editable.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\editable\bootstrap-table-editable.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\export\bootstrap-table-export.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\export\bootstrap-table-export.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\filter-control\bootstrap-table-filter-control.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\filter-control\bootstrap-table-filter-control.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\filter-control\utils.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\filter-control\utils.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\fixed-columns\bootstrap-table-fixed-columns.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\fixed-columns\bootstrap-table-fixed-columns.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\group-by-v2\bootstrap-table-group-by.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\group-by-v2\bootstrap-table-group-by.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\i18n-enhance\bootstrap-table-i18n-enhance.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\i18n-enhance\bootstrap-table-i18n-enhance.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\key-events\bootstrap-table-key-events.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\key-events\bootstrap-table-key-events.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\mobile\bootstrap-table-mobile.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\mobile\bootstrap-table-mobile.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\multiple-sort\bootstrap-table-multiple-sort.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\multiple-sort\bootstrap-table-multiple-sort.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\page-jump-to\bootstrap-table-page-jump-to.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\page-jump-to\bootstrap-table-page-jump-to.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\pipeline\bootstrap-table-pipeline.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\pipeline\bootstrap-table-pipeline.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\print\bootstrap-table-print.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\print\bootstrap-table-print.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\reorder-columns\bootstrap-table-reorder-columns.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\reorder-columns\bootstrap-table-reorder-columns.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\reorder-rows\bootstrap-table-reorder-rows.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\reorder-rows\bootstrap-table-reorder-rows.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\resizable\bootstrap-table-resizable.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\resizable\bootstrap-table-resizable.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\sticky-header\bootstrap-table-sticky-header.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\sticky-header\bootstrap-table-sticky-header.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\toolbar\bootstrap-table-toolbar.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\toolbar\bootstrap-table-toolbar.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\treegrid\bootstrap-table-treegrid.js" />
+    <None Include="wwwroot\js\DatatableAssets\extensions\treegrid\bootstrap-table-treegrid.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-af-ZA.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-af-ZA.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ar-SA.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ar-SA.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-bg-BG.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-bg-BG.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ca-ES.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ca-ES.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-cs-CZ.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-cs-CZ.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-da-DK.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-da-DK.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-de-DE.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-de-DE.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-el-GR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-el-GR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-en-US.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-en-US.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-AR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-AR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-CL.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-CL.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-CR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-CR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-ES.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-ES.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-MX.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-MX.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-NI.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-NI.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-SP.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-es-SP.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-et-EE.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-et-EE.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-eu-EU.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-eu-EU.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fa-IR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fa-IR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fi-FI.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fi-FI.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-BE.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-BE.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-CH.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-CH.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-FR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-FR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-LU.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-fr-LU.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-he-IL.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-he-IL.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-hr-HR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-hr-HR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-hu-HU.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-hu-HU.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-id-ID.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-id-ID.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-it-IT.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-it-IT.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ja-JP.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ja-JP.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ka-GE.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ka-GE.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ko-KR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ko-KR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ms-MY.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ms-MY.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-nb-NO.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-nb-NO.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-nl-BE.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-nl-BE.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-nl-NL.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-nl-NL.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-pl-PL.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-pl-PL.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-pt-BR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-pt-BR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-pt-PT.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-pt-PT.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ro-RO.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ro-RO.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ru-RU.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ru-RU.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sk-SK.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sk-SK.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sr-Cyrl-RS.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sr-Cyrl-RS.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sr-Latn-RS.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sr-Latn-RS.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sv-SE.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-sv-SE.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-th-TH.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-th-TH.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-tr-TR.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-tr-TR.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-uk-UA.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-uk-UA.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ur-PK.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-ur-PK.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-uz-Latn-UZ.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-uz-Latn-UZ.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-vi-VN.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-vi-VN.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-zh-CN.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-zh-CN.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-zh-TW.js" />
+    <None Include="wwwroot\js\DatatableAssets\locale\bootstrap-table-zh-TW.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\bootstrap-table\bootstrap-table.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\bootstrap-table\bootstrap-table.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\bootstrap-table\fonts\bootstrap-table.svg" />
+    <None Include="wwwroot\js\DatatableAssets\themes\bulma\bootstrap-table-bulma.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\bulma\bootstrap-table-bulma.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\foundation\bootstrap-table-foundation.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\foundation\bootstrap-table-foundation.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\materialize\bootstrap-table-materialize.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\materialize\bootstrap-table-materialize.min.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\semantic\bootstrap-table-semantic.js" />
+    <None Include="wwwroot\js\DatatableAssets\themes\semantic\bootstrap-table-semantic.min.js" />
     <None Include="wwwroot\sass\style.scss" />
     <None Include="wwwroot\sass\_about.scss" />
     <None Include="wwwroot\sass\_base.scss" />
@@ -62,7 +237,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\img\blog\" />
-    <Folder Include="wwwroot\img\productAndBlogAddedImages\" />
   </ItemGroup>
 
 </Project>
