--- a/WebApplicationCrud/appsettings.json
+++ b/WebApplicationCrud/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Crud;MultipleActiveResultSets=True;Trusted_connection=True;",
-    "Production": "Data Source=SQL8002.site4now.net;Initial Catalog=db_a93c69_zukasmarterasp4;User Id=db_a93c69_zukasmarterasp4_admin;Password=Nvidiagt9600"
+    "Production": "Data Source=SQL8002.site4now.net;MultipleActiveResultSets=True;Initial Catalog=db_a93c69_zukasmarterasp4;User Id=db_a93c69_zukasmarterasp4_admin;Password=Nvidiagt9600"
   },
   "Logging": {
     "LogLevel": {
